--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
     <noscript>
       <strong>We're sorry but portfolio doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
+    <div id="splash" class="splash on"></div>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
