--- a/public/index.html
+++ b/public/index.html
@@ -5,14 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=0">
     <meta name="theme-color" content="#000">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link rel="icon" href="favicon.ico">
     <title>Will Johnson</title>
   </head>
   <body>
     <noscript>
       <strong>We're sorry but portfolio doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
-    <div id="splash" class="splash on"></div>
+    <div id="splash" class="splash on">
+      <svg class="splash-logo" version="1.1" x="0px" y="0px" viewBox="0 0 36 30" style="enable-background:new 0 0 36 30; fill:#FFF;" xml:space="preserve">
+        <polygon points="36,0 33,0 27,20 21,0 18,0 15,0 16.5,5 12,20 6,0 0,0 9,30 12,30 15,30 13.5,25 18,10 24,30 27,30 30,30 28.5,25 "/>
+      </svg>
+    </div>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
