--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-133275861-1"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag(){dataLayer.push(arguments);}
+			gtag('js', new Date());
+
+			gtag('config', 'UA-133275861-1');
+		</script>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=0">
 		<meta name="theme-color" content="#000">
 		<link rel="shortcut icon" type="image/png" href="<%= BASE_URL %>favicon.ico">
+		<!-- Global site tag (gtag.js) - Google Analytics -->
 		<title>Will Johnson</title>
 	</head>
 	<body>
