--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=0">
 		<meta name="theme-color" content="#000">
-		<link rel="shortcut icon" type="image/png" href="<%= BASE_URL %>favicon.ico">
+		<link rel="shortcut icon" type="image/ico" href="<%= BASE_URL %>favicon.ico">
 		<!-- Global site tag (gtag.js) - Google Analytics -->
 		<title>Will Johnson</title>
 	</head>
